@@ -1644,7 +1644,7 @@ $strBuffer .= '<th style="text-align:center"><img src="system/themes/default/ima
 			{
 				$arrData['eval']['datepicker'] = $this->getDatePickerString();
 			}
-			
+
 			if ($objAttributes->type == 'textarea' || $objAttributes->rte != '')
 			{
 				$arrData['eval']['tl_class'] = 'clr';
