@@ -422,9 +422,9 @@ class tl_module_isotope extends Backend
 			$this->loadDataContainer('tl_iso_products');
 			$this->loadLanguageFile('tl_iso_products');
 		}
-		
+
 		$arrAttributes = array();
-		
+
 		foreach( $GLOBALS['TL_DCA']['tl_iso_products']['fields'] as $field => $arrData )
 		{
 			if ($arrData['attributes']['is_filterable'])
@@ -432,10 +432,10 @@ class tl_module_isotope extends Backend
 				$arrAttributes[$field] = strlen($arrData['label'][0]) ? $arrData['label'][0] : $field;
 			}
 		}
-				
+
 		return $arrAttributes;
 	}
-	
+
 
 	//!@todo does almost the same as getSortableAttributes, why do we need both?
 	public function getSortByFields()
@@ -445,9 +445,9 @@ class tl_module_isotope extends Backend
 			$this->loadDataContainer('tl_iso_products');
 			$this->loadLanguageFile('tl_iso_products');
 		}
-		
+
 		$arrAttributes = array();
-		
+
 		foreach( $GLOBALS['TL_DCA']['tl_iso_products']['fields'] as $field => $arrData )
 		{
 			if ($arrData['attributes']['is_order_by_enabled'])
@@ -455,7 +455,7 @@ class tl_module_isotope extends Backend
 				$arrAttributes[$field] = strlen($arrData['label'][0]) ? $arrData['label'][0] : $field;
 			}
 		}
-				
+
 		return $arrAttributes;
 	}
 
@@ -467,9 +467,9 @@ class tl_module_isotope extends Backend
 			$this->loadDataContainer('tl_iso_products');
 			$this->loadLanguageFile('tl_iso_products');
 		}
-		
+
 		$arrAttributes = array();
-		
+
 		foreach( $GLOBALS['TL_DCA']['tl_iso_products']['fields'] as $field => $arrData )
 		{
 			if ($arrData['attributes']['is_searchable'])
@@ -477,7 +477,7 @@ class tl_module_isotope extends Backend
 				$arrAttributes[$field] = strlen($arrData['label'][0]) ? $arrData['label'][0] : $field;
 			}
 		}
-				
+
 		return $arrAttributes;
 	}
 
